src/main/java/com/example/shortudy/global/error/exception/InvalidPasswordException.java
package com.example.shortudy.global.error.exception;

public class InvalidPasswordException extends RuntimeException {
    public InvalidPasswordException(String message) {
        super(message);
    }
}
